kubernetes/apps/media/radarr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Media
      url: "http://radarr.media.svc.cluster.local/ping"
      conditions:
        - "[STATUS] == 200"
        - "[BODY].status == OK"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Radarr
    gethomepage.dev/icon: radarr.png
    gethomepage.dev/href: https://radarr.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=radarr
    gethomepage.dev/widget.type: radarr
    gethomepage.dev/widget.url: http://radarr.media.svc.cluster.local
    gethomepage.dev/widget.key: 33608bebb2f241e78355a02753680f00
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - radarr.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: traefik-warp
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oidc-auth
      backendRefs:
        - group: ""
          kind: Service
          name: radarr
          port: 80
          weight: 1
